<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="32dp"
    tools:context="com.example.hannabotar.footballcounter.MainActivity">

    <LinearLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_a_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a"
                android:textColor="@color/team_color"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <TextView
                    android:drawableBottom="@drawable/icon_foul_18_2"
                    android:id="@+id/foul_text_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
                <TextView
                    android:drawableBottom="@drawable/icon_yellow_card_18_2"
                    android:id="@+id/yellow_text_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
                <TextView
                    android:drawableBottom="@drawable/icon_red_card_18"
                    android:id="@+id/red_text_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:layout_alignParentRight="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addGoalA"
                android:background="@drawable/goal_state"
                android:text="@string/goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFoulA"
                android:background="@drawable/foul_state"
                android:text="@string/foul" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addYellowA"
                android:background="@drawable/yellow_state"
                android:text="@string/yellow_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addRedA"
                android:background="@drawable/red_state"
                android:text="@string/red_card" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:id="@+id/team_b_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b"
                android:textColor="@color/team_color"
                android:textSize="@dimen/team_text_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp">
                <TextView
                    android:drawableBottom="@drawable/icon_foul_18_2"
                    android:id="@+id/foul_text_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
                <TextView
                    android:drawableBottom="@drawable/icon_yellow_card_18_2"
                    android:id="@+id/yellow_text_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
                <TextView
                    android:drawableBottom="@drawable/icon_red_card_18"
                    android:id="@+id/red_text_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:layout_alignParentRight="true"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/score_color"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addGoalB"
                android:background="@drawable/goal_state"
                android:text="@string/goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addFoulB"
                android:background="@drawable/foul_state"
                android:text="@string/foul" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addYellowB"
                android:background="@drawable/yellow_state"
                android:text="@string/yellow_card" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addRedB"
                android:background="@drawable/red_state"
                android:text="@string/red_card" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="14dp"
        >
        <Button
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="start 1st half"
            android:onClick="startTimer"/>
        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text = "00 : 00"
            android:textSize="@dimen/timer_text_size"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/reset_button"
            android:onClick="resetScore"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/show_hide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="showOrHideEvolution"
            android:text="@string/show_evolution" />

        <!--<ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/game_evolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/team_color"
                />
        </ScrollView>-->
    </LinearLayout>


    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="resetScore"
            android:text="@string/reset_button" />
    </LinearLayout>-->

</LinearLayout>
